# LLMoonClip_API

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  main.py  pyproject.toml
.agent/rules/: architecture-rule.md  git-rule.md  uv-rule.md
app/: main.py
app/application/use_cases/: create_category.py  create_response.py  list_categories.py  list_responses.py  search_responses.py  update_response.py
app/config/: logging.py  settings.py
app/domain/models/: category.py  llm_response.py
app/domain/repositories/: category_repository.py  llm_response_repository.py
app/domain/services/: llm_response_service.py
app/infrastructure/db/: base.py  models.py
app/infrastructure/repositories/: category_repository_impl.py  llm_response_repository_impl.py
app/presentation/api/: deps.py
app/presentation/api/v1/: categories.py  responses.py  router.py
app/presentation/schemas/: category.py  llm_response.py
